# manage

./: Cargo.toml  Justfile
src/: app.rs  cli.rs  docker.rs  inquire.rs  labels.rs  lib.rs  mayo.rs  parameters.rs  registry.rs  server.rs  versioning.rs
src/command/: create.rs  ls.rs  mod.rs
