[package]
name = "manage"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "manage"

[dependencies]
anyhow = "1.0"
bollard = "0.18"
console = "0.15"
futures = "0.3"
human-panic = "2.0"
indicatif = "0.17"
inquire = { version = "0.7", default-features = false, features = ["console"] }
names = { version = "0.14", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["rt", "macros"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
panic = "abort"
