[package]
name = "manage"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cli"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[dependencies]
anyhow = "1.0"
bollard = "0.18"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
futures-util = { version = "0.3", default-features = false }
indicatif = "0.17"
inquire = { version = "0.7", default-features = false, features = ["console"] }
names = { version = "0.14", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["charset", "json", "rustls-tls-webpki-roots"] }
rustls-pemfile = "2.2"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["macros", "rt"] }
